--- a/manin/Diseno_Sistemas/Diseno_Sistemas/Diseno_Sistemas.csproj
+++ b/manin/Diseno_Sistemas/Diseno_Sistemas/Diseno_Sistemas.csproj
@@ -142,6 +142,12 @@
     <Compile Include="proveedores.Designer.cs">
       <DependentUpon>proveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="splash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="splash.Designer.cs">
+      <DependentUpon>splash.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="confacturas.resx">
       <DependentUpon>confacturas.cs</DependentUpon>
     </EmbeddedResource>
@@ -196,6 +202,9 @@
     </Compile>
     <EmbeddedResource Include="proveedores.resx">
       <DependentUpon>proveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="splash.resx">
+      <DependentUpon>splash.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
