--- a/Diseno_Sistemas/Diseno_Sistemas/Diseno_Sistemas.csproj
+++ b/Diseno_Sistemas/Diseno_Sistemas/Diseno_Sistemas.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="confacturas.cs">
+    <Compile Include="consdebitos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="confacturas.Designer.cs">
-      <DependentUpon>confacturas.cs</DependentUpon>
+    <Compile Include="consdebitos.Designer.cs">
+      <DependentUpon>consdebitos.cs</DependentUpon>
     </Compile>
     <Compile Include="consmonedas.cs">
       <SubType>Form</SubType>
@@ -70,6 +70,12 @@
     </Compile>
     <Compile Include="consproveedores.Designer.cs">
       <DependentUpon>consproveedores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="cons_tipos_proveedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cons_tipos_proveedores.Designer.cs">
+      <DependentUpon>cons_tipos_proveedores.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -169,8 +175,8 @@
     <Compile Include="splash.Designer.cs">
       <DependentUpon>splash.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="confacturas.resx">
-      <DependentUpon>confacturas.cs</DependentUpon>
+    <EmbeddedResource Include="consdebitos.resx">
+      <DependentUpon>consdebitos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="consmonedas.resx">
       <DependentUpon>consmonedas.cs</DependentUpon>
@@ -180,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="consproveedores.resx">
       <DependentUpon>consproveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="cons_tipos_proveedores.resx">
+      <DependentUpon>cons_tipos_proveedores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmdebitos.resx">
       <DependentUpon>frmdebitos.cs</DependentUpon>
@@ -287,6 +296,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\backcxp.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\moneda.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tipo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tipo1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
